--- a/css/styles.css
+++ b/css/styles.css
@@ -71,11 +71,13 @@ ul {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2E2F42;
+    margin-bottom: 72px;
     }
 
  .text {
     letter-spacing: 0.02em;
     color: #434455;
+    margin-bottom: 32px;
       }
 
 
@@ -102,7 +104,7 @@ ul {
  }   
 
  .nav {
-    margin-right: 40px;
+    margin-right: 10px;
     color: #2e2f42 ;
     
  }
@@ -117,6 +119,7 @@ ul {
 
     list-style: none;
     letter-spacing: 0.02em;
+    gap: 24px;
 }
 
 .address-list {
@@ -127,7 +130,8 @@ ul {
 
 .nav-list {
     display: flex;
-    align-items: center; 
+    align-items: center;
+    margin-left: 76px;
 }
 
 .item-link {
@@ -153,6 +157,7 @@ ul {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4D5AE5;
+    margin-left: 156px;
 }
 .header-logo-studio {
     margin-right: 76px;
@@ -224,7 +229,7 @@ margin-bottom: 8px;
 }
 
   /* OUR WORK */
-   .our-work.title{
+   .our-work-title .title {
     font-weight: 700;
 font-size: 36px;
 line-height: 1.11;
@@ -232,6 +237,12 @@ text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 color: #2E2F42;
+
+   }
+
+   .our-work {
+    display: flex;
+    gap: 24px;
    }
 
    /* OUR TEAM*/
@@ -240,8 +251,25 @@ color: #2E2F42;
     background-color: #F4F4FD;
 }
 
+team.container {
+    display: flex;
+    gap: 24px;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .team-list {
+    display: flex;
+
+}
+
+.team-item {
     background-color: #FFFFFF;
+
+}
+
+.team-text {
+    text-align: center;
 }
    .title-name {
     font-size: 20px;
@@ -249,22 +277,28 @@ color: #2E2F42;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2E2F42;
+margin-bottom: 8px;
+text-align: center;
    }
 
 
    /*FOOTER*/
    .footer {
-    padding-top: 140px;
-    padding-bottom: 100px;
+    padding-top: 156px;
+    padding-bottom: 156px;
     background: #2E2F42;
    }
    .footer-logo-studio {
     color: #F4F4FD;
+    margin-bottom: 16px;
+
    }
    .footer-text {
     color: #F4F4FD;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    width: 264px;
+    margin-left: 156px;
    }
 
 
