--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ ul {
 .header-logo {
     font-family: 'Raleway', sans-serif;
     font-style: normal;
+    padding: 24px 0 24px;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
@@ -186,7 +187,9 @@ ul {
 .header-logo-studio {
     margin-right: 76px;
     color: #2E2F42;
+    padding: 24px 0 24px;
 }
+
 
 .hero {
 
