--- a/css/styles.css
+++ b/css/styles.css
@@ -60,8 +60,6 @@ ul {
 
 .navigation {
     display: flex;
-    padding-top: 24px;
-    padding-bottom: 24px;
     align-items: center;
    
 }
@@ -89,7 +87,6 @@ ul {
  .text {
     letter-spacing: 0.02em;
     color: #434455;
-    margin-bottom: 32px;
       }
 
 
@@ -116,7 +113,6 @@ ul {
  }   
 
  .nav {
-    padding: 24px 0 24px;
     color: #2e2f42 ;
     
  }
@@ -166,12 +162,12 @@ overflow: hidden;
     display: flex;
     align-items: center;
     gap: 40px;
-    padding: 24px 0 24px;
+    padding: 24px 0;
    
 }
 
 .item-link {
-    margin-right: 40px;
+
 }
 .header-container {
     display: flex;
@@ -184,7 +180,6 @@ overflow: hidden;
 .header-logo {
     font-family: 'Raleway', sans-serif;
     font-style: normal;
-    padding: 24px 0 24px;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
@@ -195,7 +190,6 @@ overflow: hidden;
 
 }
 .header-logo-studio {
-    margin-right: 76px;
     color: #2E2F42;
     padding: 24px 0 24px;
 }
@@ -203,9 +197,8 @@ overflow: hidden;
 
 .hero {
 
-    padding-top: 188px;
-    padding-bottom: 188px;
-    margin-bottom: 60px;
+    padding-top: 120px;
+    padding-bottom: 120px;
     background-color: #2E2F42;
 }
 
@@ -362,16 +355,15 @@ margin-bottom: 8px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    margin-right: 76px;
     display: inline-block;
-    margin-bottom: 16px;
+    margin-bottom: 17.5px;
     color: #4D5AE5;
 
 
    }
    .footer-logo-studio {
     color: #F4F4FD;
-    margin-bottom: 16px;
+    
     display: inline-block;
 
    }
@@ -389,7 +381,6 @@ margin-bottom: 8px;
    /*PORTFOLIO*/
 
    .photo-section {
-    padding: 96px 0 120px 0
 }
 
 
@@ -424,7 +415,7 @@ color: #4D5AE5
     font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
-letter-spacing: 0.02em;
+letter-spacing: 0.4px;
     color: #2E2F42; 
 }
 
@@ -438,8 +429,12 @@ letter-spacing: 0.02em;
 }
 
 .portfolio-text {
-    letter-spacing: 0.02em;
     color: #434455; 
+    font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0.32px;
 }
 
 .portfolio-card-set {
@@ -447,12 +442,13 @@ letter-spacing: 0.02em;
     flex-wrap: wrap;
     gap: 24px;
     row-gap: 48px;
+    margin-bottom: 120px;
 
 }
 
 .portfolio-card {
     width: calc((100% - 2 * 24px) / 3);
-    padding-bottom: 48px;
+
 }
 
 
